# DuckHax-CLI

./: .gitignore  CMakeLists.txt  README.md
filetemplates/: Bitmap_Z.bt  DPC.bt  Light_Z.bt  Mesh_Z.bt  UserDefine_Z.bt
meta/: command_list.csv  param.csv
src/: autodumper.cpp  autodumper.h  bitmapbuilder.cpp  bitmapbuilder.h  bitmapparser.cpp  bitmapparser.h  dpcbuilder.cpp  dpcparser.cpp  dpcparser.h  errormessages.h  main.cpp  meshparser.cpp  meshparser.h  parser.cpp  parser.h  parsinghelper.cpp  parsinghelper.h  sdxparser.cpp  sdxparser.h  soundparser.cpp  soundparser.h  zounaclasses.cpp  zounaclasses.h
